--- a/modules/order/order-orders/src/components/Cards/Card/default.module.scss
+++ b/modules/order/order-orders/src/components/Cards/Card/default.module.scss
@@ -64,3 +64,12 @@
 
   display: block;
 }
+
+.controls {
+
+  display: block;
+  border-top: 1px solid $pale-lilac;
+  margin: 16px 0 0;
+  padding: 16px 0 0;
+  text-align: right;
+}
