--- a/ui.packages/admin-kit/src/symbols/Status/Label/default.module.scss
+++ b/ui.packages/admin-kit/src/symbols/Status/Label/default.module.scss
@@ -5,9 +5,6 @@
 .status {
 
   display: inline-block;
-  border: 2px solid $blue-grey;
-  padding: 7px 24px 9px 16px;
-  border-radius: 5px;
   color: $blue-grey;
 }
 
@@ -27,7 +24,7 @@
     border-radius: 50%;
     border: 3px solid;
     vertical-align: middle;
-    margin: 0 8px 0 0;
+    margin: 0 8px 3px 0;
     content: '';
   }
 }
