--- a/modules/order/order-orders/src/components/Cards/Card/default.module.scss
+++ b/modules/order/order-orders/src/components/Cards/Card/default.module.scss
@@ -9,6 +9,7 @@
   border: 1px solid $pale-lilac;
   background: $white;
   padding: 24px;
+  box-shadow: 1px 2px 6px 0 rgba($blue-grey, .3);
 
   & + & {
 
