--- a/modules/admin/admin-products/src/components/Table/default.module.scss
+++ b/modules/admin/admin-products/src/components/Table/default.module.scss
@@ -41,12 +41,13 @@
 .title {
 
   display: block;
+  text-decoration: underline;
 }
 
-.description {
+.products {
 
   display: block;
-  margin: 16px 0 0;
+  margin: 24px 0 0;
 }
 
 .mode {
