update mail rabbit queues

--- a/services/mail-srv/src/templates/order/update/index.html
+++ b/services/mail-srv/src/templates/order/update/index.html
@@ -24,6 +24,9 @@
           {% if status.code == 'new' %}
             <h2 style="display: block; font-size: 14px; color: #b9311b; margin: 40px 0 0; padding: 0; letter-spacing: .5px;">{{ status.displayName }}</h2>
           {% endif %}
+          {% if status.code == 'new' %}
+            <h2 style="display: block; font-size: 14px; color: #b9311b; margin: 40px 0 0; padding: 0; letter-spacing: .5px;">{{ status.displayName }}</h2>
+          {% endif %}
         </td>
       </tr>
       <tr>
