--- a/modules/order/order-orders/src/components/Cards/Card/Product/default.module.scss
+++ b/modules/order/order-orders/src/components/Cards/Card/Product/default.module.scss
@@ -7,11 +7,21 @@
   display: flex;
   flex-direction: row;
   flex: 1 0;
+  align-items: center;
   overflow: hidden;
 
   & + & {
 
     margin: 16px 0 0;
+  }
+
+  &:before {
+
+    display: inline-block;
+    counter-increment: product;
+    content: counter(product) ".";
+    font-size: 13px;
+    margin: 0 8px 0 0;
   }
 }
 
