--- a/modules/order/order-orders/src/components/Cards/Card/Product/default.module.scss
+++ b/modules/order/order-orders/src/components/Cards/Card/Product/default.module.scss
@@ -27,22 +27,23 @@
 
 .title {
 
-  display: block;
-  white-space: nowrap;
+  display: flex;
+  flex-direction: column;
+  flex: 1 0;
+  margin: 0 0 0 8px;
 }
 
 .vendor {
 
   display: block;
   white-space: nowrap;
-  margin: 0 0 0 8px;
 }
 
 .value {
 
   display: block;
   white-space: nowrap;
-  margin: 0 0 0 16px;
+  margin: 0 16px 0 16px;
   text-decoration: underline;
 }
 
@@ -50,24 +51,17 @@
 
   display: block;
   white-space: nowrap;
-  margin: 0 0 0 16px;
 }
 
 .number {
 
   display: block;
   white-space: nowrap;
-  margin: 0 0 0 8px;
 }
 
 .delimiter {
 
   display: inline-block;
-
-  &:before {
-
-    display: inline-block;
-    content: '-';
-    margin: 0 0 0 8px;
-  }
+  margin: 0 8px 0;
+  font-size: 14px;
 }
