--- a/modules/order/order-orders/src/components/Cards/Card/default.module.scss
+++ b/modules/order/order-orders/src/components/Cards/Card/default.module.scss
@@ -13,7 +13,7 @@
 
   & + & {
 
-    margin: 34px 0 0;
+    margin: 40px 0 0;
   }
 }
 
@@ -65,7 +65,6 @@
 
   display: block;
   margin: 16px 0 0;
-  counter-reset: product;
 }
 
 .footer {
@@ -76,6 +75,7 @@
   border-top: 1px solid $pale-lilac;
   margin: 16px 0 0;
   padding: 24px 0 0;
+  counter-reset: product;
 }
 
 .controls {
@@ -85,4 +85,19 @@
   margin: 24px 0 0;
   padding: 16px 0 0;
   text-align: right;
+}
+
+.total-price {
+
+  display: block;
+  margin: 24px 0 0;
+  text-align: right;
+}
+
+.total {
+
+  display: inline-block;
+  border-top: 1px solid $pale-lilac;
+  text-align: right;
+  padding: 24px 0 0 48px;
 }
