--- a/ui.packages/admin-kit/src/symbols/Datepicker/Default/Dashboard/Dates/Days/default.module.scss
+++ b/ui.packages/admin-kit/src/symbols/Datepicker/Default/Dashboard/Dates/Days/default.module.scss
@@ -28,8 +28,8 @@
   display: flex;
   flex-direction: column;
   flex: 0 0 auto;
-  width: 42px;
-  height: 45px;
+  width: 36px;
+  height: 36px;
   justify-content: center;
   align-items: center;
   cursor: pointer;
@@ -67,9 +67,9 @@
 .container {
 
   display: inline-flex;
-  width: 22px;
-  height: 22px;
-  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  border-radius: 3px;
   justify-content: center;
   align-items: center;
   color: $coal-dark;
@@ -89,7 +89,7 @@
   display: flex;
   flex-direction: column;
   flex: 0 0 auto;
-  width: 42px;
+  width: 36px;
   justify-content: center;
   align-items: center;
 }
