--- a/ui.packages/admin-kit/src/symbols/Datepicker/Default/Dashboard/Dates/default.module.scss
+++ b/ui.packages/admin-kit/src/symbols/Datepicker/Default/Dashboard/Dates/default.module.scss
@@ -24,10 +24,12 @@
   display: flex;
   flex-direction: row;
   flex: 1 0;
-  margin: 20px 0 0;
+  margin: 24px 0 0;
   justify-content: space-between;
   align-items: center;
-  padding: 0 0 10px;
+  background: rgba($primary, .05);
+  padding: 8px;
+  border-radius: 3px;
 }
 
 .modify {
@@ -38,6 +40,11 @@
   text-transform: uppercase;
   color: $primary;
   cursor: pointer;
+
+  &:hover {
+
+    text-decoration: underline;
+  }
 }
 
 .time {
