--- a/clients/client-ui/src/wrappers/Empty/default.module.scss
+++ b/clients/client-ui/src/wrappers/Empty/default.module.scss
@@ -7,6 +7,12 @@
   display: flex;
   flex: 1 0 auto;
   flex-direction: column;
+  align-items: center;
+  background-image: url("./arrow.png"), url("./arrow.png"), url("./net.png");
+  background-position: left, right, top;
+  background-attachment: scroll, scroll, scroll;
+  background-repeat: repeat-y, repeat-y, repeat;
+  background-size: 80px, 80px, 80px;
 }
 
 .content {
@@ -14,6 +20,6 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
-  width: 100%;
+  max-width: 1024px;
   z-index: 10;
 }
