--- a/modules/client/client-main/src/components/default.module.scss
+++ b/modules/client/client-main/src/components/default.module.scss
@@ -57,3 +57,19 @@
   color: $white;
   margin: 8px 0 0;
 }
+
+.link {
+
+  display: inline-block;
+  color: $primary;
+  font-size: 13px;
+}
+
+@media screen and (max-width: 600px) {
+
+  .description {
+
+    padding: 0 60px;
+    box-sizing: border-box;
+  }
+}
