--- a/modules/mobile/order/src/components/default.module.scss
+++ b/modules/mobile/order/src/components/default.module.scss
@@ -4,28 +4,14 @@
 
 .wrapper {
 
-  display: block;
-  width: 900px;
+  display: flex;
+  flex: 1 0;
+  padding: 24px 16px;
 }
-
-.header {
-
-  display: block;
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 18px;
-  letter-spacing: .5px;
-  margin: 0 0 40px;
-}
-
 
 .content {
 
-  display: block;
-}
-
-.controls {
-
-  display: block;
-  text-align: right;
+  display: flex;
+  flex: 1 0;
+  flex-direction: column;
 }
