--- a/ui.packages/mobile-kit/src/Cart/default.module.scss
+++ b/ui.packages/mobile-kit/src/Cart/default.module.scss
@@ -10,6 +10,12 @@
   border-radius: 50%;
   background: $primary;
   align-items: center;
+  transition: transform 150ms, background-color 150ms;
+
+  &:active {
+    background: $primary-darken;
+    transform: scale(.95);
+  }
 }
 
 .icon {
@@ -25,5 +31,9 @@
 
   &--success {
     background: $success;
+
+    &:active {
+      background: $success-darken;
+    }
   }
 }
