add products in cart

--- a/ui.packages/theme2/src/index.module.scss
+++ b/ui.packages/theme2/src/index.module.scss
@@ -11,6 +11,10 @@ $success-lighten:  #64C974  !default;
 $success:          #38AF4B  !default;
 $success-darken:   #339C44  !default;
 
+$danger-lighten:   #D15050  !default;
+$danger:           #AF3838  !default;
+$danger-darken:    #942828  !default;
+
 $gray-lighten:     #787878  !default;
 $gray:             #636363  !default;
 $gray-darken:      #525252  !default;
