--- a/ui.packages/mobile-kit/src/Cart/default.module.scss
+++ b/ui.packages/mobile-kit/src/Cart/default.module.scss
@@ -4,6 +4,7 @@
 
 .cart {
 
+  position: relative;
   display: inline-flex;
   width: 60px;
   height: 60px;
@@ -25,6 +26,27 @@
   height: 46px;
   background: url("./cart.svg") center/100% no-repeat;
   margin: 0 0 0 2px;
+}
+
+.count {
+
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  flex: 1 0;
+  justify-content: center;
+  align-items: center;
+  background: $danger;
+  color: $white;
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  font-size: 13px;
+  font-weight: 600;
+  padding: 2px 0 0;
+  box-sizing: border-box;
 }
 
 .mode {
