--- a/modules/mobile/product/src/components/Mode/default.module.scss
+++ b/modules/mobile/product/src/components/Mode/default.module.scss
@@ -4,6 +4,7 @@
 
 .wrapper {
 
+  position: relative;
   display: flex;
   flex-direction: row;
   flex: 1 0;
@@ -24,15 +25,25 @@
   background: $info;
 }
 
-.marker {
+.count {
 
-  display: inline-block;
+  position: absolute;
+  top: -7px;
+  right: -7px;
+  display: flex;
+  flex-direction: column;
+  flex: 1 0;
+  justify-content: center;
+  align-items: center;
+  background: $danger;
+  color: $white;
   border-radius: 50%;
-  border: 3px solid $white;
-  width: 9px;
-  height: 9px;
-  vertical-align: middle;
-  margin: 0 8px 0 0;
+  width: 22px;
+  height: 22px;
+  font-size: 13px;
+  font-weight: 600;
+  padding: 2px 0 0;
+  box-sizing: border-box;
 }
 
 .content {
