--- a/modules/mobile/order/src/components/default.module.scss
+++ b/modules/mobile/order/src/components/default.module.scss
@@ -1,12 +1,13 @@
 
-@import "~@ui.packages/theme";
+@import "~@ui.packages/theme-2";
 
 
 .wrapper {
 
   display: flex;
+  flex-direction: column;
   flex: 1 0;
-  padding: 24px 16px;
+  overflow: hidden;
 }
 
 .content {
@@ -14,4 +15,41 @@
   display: flex;
   flex: 1 0;
   flex-direction: column;
+  padding: 32px 16px 128px;
+  overflow: auto;
+  z-index: 10;
+}
+
+.control {
+
+  display: block;
+  background: $background;
+  padding: 16px;
+  box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.25);
+  z-index: 20;
+}
+
+.header {
+
+  display: flex;
+  flex-direction: row;
+  flex: 0 0;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.products {
+
+  display: flex;
+  flex-direction: column;
+  flex: 0 0;
+  margin: 32px 0 0;
+}
+
+.clean {
+
+  display: block;
+  color: $danger;
+  font-size: 16px;
+  font-weight: 600;
 }
