--- a/modules/mobile/main/src/components/Product/Mode/default.module.scss
+++ b/modules/mobile/main/src/components/Product/Mode/default.module.scss
@@ -7,29 +7,30 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  flex: 1 0;
+  flex: 0 0;
   border-radius: 4px;
-  background: $gray-lighten;
-  padding: 16px;
+  border: 1px solid $gray-lighten;
+  background: rgba($gray-lighten, .4);
+  padding: 8px 12px;
   align-items: center;
   transition: background-color 200ms;
 
   & + & {
-
-    margin: 0 0 0 8px;
+    margin: 8px 0 0;
   }
 }
 
 .active {
 
-  border: 1px solid $info;
+  border: 1px solid $info-darken;
+  background: rgba($info-darken, .4);
 }
 
 .count {
 
   position: absolute;
-  top: -7px;
-  right: -7px;
+  top: -5px;
+  right: -5px;
   display: flex;
   flex-direction: column;
   flex: 1 0;
@@ -38,11 +39,11 @@
   background: $danger;
   color: $white;
   border-radius: 50%;
-  width: 22px;
-  height: 22px;
-  font-size: 13px;
+  width: 18px;
+  height: 18px;
+  font-size: 11px;
   font-weight: 600;
-  padding: 2px 0 0;
+  padding: 1px 0 0;
   box-sizing: border-box;
 }
 
@@ -57,9 +58,9 @@
 
   display: inline-block;
   font-family: inherit;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 600;
   color: $white;
   vertical-align: middle;
-  margin: 0 0 8px;
+  margin: 0 0 4px;
 }
