max size's file

--- a/modules/mobile/main/src/components/Product/Mode/default.module.scss
+++ b/modules/mobile/main/src/components/Product/Mode/default.module.scss
@@ -9,8 +9,7 @@
   flex-direction: row;
   flex: 0 0;
   border-radius: 4px;
-  border: 1px solid $gray-lighten;
-  background: rgba($gray-lighten, .4);
+  background: $gray-lighten;
   padding: 8px 12px;
   align-items: center;
   transition: background-color 200ms;
@@ -22,8 +21,7 @@
 
 .active {
 
-  border: 1px solid $info-darken;
-  background: rgba($info-darken, .4);
+  background: $info-darken;
 }
 
 .count {
