--- a/clients/mobile-ui/src/wrappers/Navigate/Cart/default.module.scss
+++ b/clients/mobile-ui/src/wrappers/Navigate/Cart/default.module.scss
@@ -8,8 +8,8 @@
   right: 0;
   bottom: 0;
   display: block;
-  width: 116px;
-  height: 105px;
+  width: 100px;
+  height: 100px;
   border-radius: 105px 0 0 0;
   z-index: 99999;
 }
@@ -17,8 +17,8 @@
 .cart {
 
   position: absolute;
-  right: 16px;
-  bottom: 16px;
+  right: 10px;
+  bottom: 10px;
 }
 
 .background {
@@ -27,6 +27,6 @@
   width: 225px;
   height: 225px;
   border-radius: 50%;
-  background: $background;
+  background: $gray-darken;
   box-shadow: -2px -2px 6px 0 rgba(black, 20%);
 }
