--- a/modules/mobile/main/src/components/Product/Mode/Price/default.module.scss
+++ b/modules/mobile/main/src/components/Product/Mode/Price/default.module.scss
@@ -5,14 +5,14 @@
 .wrapper {
 
   display: block;
-  text-align: right;
+  text-align: left;
 }
 
 .price {
 
   display: inline-block;
   font-family: inherit;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 700;
   color: $white;
   vertical-align: baseline;
@@ -22,7 +22,7 @@
 
   display: inline-block;
   font-family: inherit;
-  font-size: 14px;
+  font-size: 11px;
   font-weight: 600;
   color: $white;
   vertical-align: baseline;
