--- a/modules/mobile/main/src/components/Product/Mode/default.module.scss
+++ b/modules/mobile/main/src/components/Product/Mode/default.module.scss
@@ -10,7 +10,7 @@
   flex: 0 0;
   border-radius: 4px;
   background: $gray-lighten;
-  padding: 8px 12px;
+  padding: 8px 8px 8px 16px;
   align-items: center;
   transition: background-color 200ms;
 
@@ -37,9 +37,9 @@
   background: $danger;
   color: $white;
   border-radius: 50%;
-  width: 18px;
-  height: 18px;
-  font-size: 11px;
+  width: 16px;
+  height: 16px;
+  font-size: 8px;
   font-weight: 600;
   padding: 1px 0 0;
   box-sizing: border-box;
@@ -56,9 +56,18 @@
 
   display: inline-block;
   font-family: inherit;
-  font-size: 14px;
-  font-weight: 600;
+  font-style: italic;
+  font-size: 13px;
+  font-weight: 500;
   color: $white;
   vertical-align: middle;
-  margin: 0 0 4px;
+  margin: 0 0 2px;
+}
+
+.marker {
+
+  display: block;
+  width: 16px;
+  height: 16px;
+  background: url("./marker.svg") center/100% no-repeat;
 }
