--- a/modules/mobile/comments/src/components/default.module.scss
+++ b/modules/mobile/comments/src/components/default.module.scss
@@ -4,9 +4,10 @@
 
 .wrapper {
 
-  position: relative;
   display: flex;
+  flex-direction: column;
   flex: 1 0;
+  overflow: hidden;
 }
 
 .content {
@@ -14,4 +15,16 @@
   display: flex;
   flex: 1 0;
   flex-direction: column;
+  padding: 32px 16px 128px;
+  overflow: auto;
+  z-index: 10;
+}
+
+.header {
+
+  display: flex;
+  flex-direction: row;
+  flex: 0 0;
+  justify-content: space-between;
+  align-items: center;
 }
