--- a/modules/mobile/main/src/components/Product/Mode/default.module.scss
+++ b/modules/mobile/main/src/components/Product/Mode/default.module.scss
@@ -10,9 +10,27 @@
   flex: 0 0;
   border-radius: 4px;
   background: $gray-lighten;
-  padding: 8px 8px 8px 16px;
+  padding: 8px 8px 8px 8px;
   align-items: center;
   transition: background-color 200ms;
+
+  &:before {
+
+    position: absolute;
+    left: -8px;
+    display: block;
+    content: '';
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: $gray-lighten;
+    transition: background-color 200ms;
+  }
+
+  &:after {
+
+    transition: background-color 200ms;
+  }
 
   & + & {
     margin: 8px 0 0;
@@ -22,27 +40,44 @@
 .active {
 
   background: $info-darken;
+
+  &:before {
+
+    background: $info-darken;
+  }
+
+  &:after {
+
+    position: absolute;
+    left: -4px;
+    display: block;
+    content: '';
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: $white;
+  }
 }
 
 .count {
 
   position: absolute;
-  top: -5px;
-  right: -5px;
+  right: -10px;
   display: flex;
   flex-direction: column;
   flex: 1 0;
   justify-content: center;
   align-items: center;
-  background: $danger;
+  background: $success;
   color: $white;
   border-radius: 50%;
-  width: 16px;
-  height: 16px;
-  font-size: 8px;
+  width: 20px;
+  height: 20px;
+  font-size: 9px;
   font-weight: 600;
-  padding: 1px 0 0;
+  padding: 3px 0 0;
   box-sizing: border-box;
+  border-left: 1px solid $white;
 }
 
 .content {
@@ -50,6 +85,7 @@
   display: flex;
   flex-direction: column;
   flex: 1 0;
+  margin: 0 0 0 12px;
 }
 
 .value {
@@ -62,12 +98,4 @@
   color: $white;
   vertical-align: middle;
   margin: 0 0 2px;
-}
-
-.marker {
-
-  display: block;
-  width: 16px;
-  height: 16px;
-  background: url("./marker.svg") center/100% no-repeat;
 }
