--- a/modules/mobile/product/src/components/Mode/default.module.scss
+++ b/modules/mobile/product/src/components/Mode/default.module.scss
@@ -10,40 +10,81 @@
   flex: 1 0;
   border-radius: 4px;
   background: $gray-lighten;
-  padding: 16px;
+  padding: 16px 16px 16px 24px;
   align-items: center;
   transition: background-color 200ms;
 
+  &:before {
+
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    display: block;
+    content: '';
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin-left: -10px;
+    background: $gray-lighten;
+    transition: background-color 200ms;
+  }
+
+  &:after {
+
+    transition: background-color 200ms;
+  }
+
   & + & {
 
-    margin: 0 0 0 8px;
+    margin: 0 0 0 16px;
   }
 }
 
 .active {
 
-  border: 1px solid $info;
+  background: $info-darken;
+
+  &:before {
+
+    background: $info-darken;
+  }
+
+  &:after {
+
+    position: absolute;
+    top: -5px;
+    left: 50%;
+    display: block;
+    content: '';
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: $white;
+    margin-left: -5px;
+  }
 }
 
 .count {
 
   position: absolute;
-  top: -7px;
-  right: -7px;
+  bottom: -10px;
+  left: 50%;
   display: flex;
   flex-direction: column;
   flex: 1 0;
   justify-content: center;
   align-items: center;
-  background: $danger;
+  background: $success;
   color: $white;
   border-radius: 50%;
-  width: 22px;
-  height: 22px;
-  font-size: 13px;
+  width: 20px;
+  height: 20px;
+  margin-left: -10px;
+  font-size: 11px;
   font-weight: 600;
   padding: 2px 0 0;
   box-sizing: border-box;
+  border-top: 1px solid $white;
 }
 
 .content {
@@ -57,8 +98,9 @@
 
   display: inline-block;
   font-family: inherit;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 600;
+  font-style: italic;
   color: $white;
   vertical-align: middle;
   margin: 0 0 8px;
