dialog for address

--- a/modules/mobile/order/src/components/Address/Item/default.module.scss
+++ b/modules/mobile/order/src/components/Address/Item/default.module.scss
@@ -33,7 +33,7 @@
   display: block;
   width: 16px;
   height: 16px;
-  background: url("./arrow.svg") center/100% no-repeat;
+  background: url("arrow.svg") center/100% no-repeat;
 }
 
 .title {
