--- a/modules/mobile/order/src/components/Address/Form/default.module.scss
+++ b/modules/mobile/order/src/components/Address/Form/default.module.scss
@@ -15,50 +15,22 @@
   display: flex;
   flex: 1 0;
   flex-direction: column;
-  padding: 32px 16px 128px;
+  padding: 74px 16px 16px;
   overflow: auto;
-  z-index: 10;
 }
 
-.control {
+.controls {
 
   display: block;
-  background: $background;
   padding: 16px;
+  background: $background;
   box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.25);
   z-index: 20;
 }
 
-.header {
-
-  display: flex;
-  flex-direction: row;
-  flex: 0 0;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.products {
-
-  display: flex;
-  flex-direction: column;
-  flex: 0 0;
-  margin: 32px 0 0;
-}
-
-.clean {
-
-  display: block;
-  color: $danger;
-  font-size: 16px;
-  font-weight: 600;
-}
-
 .row {
 
-  display: flex;
-  flex-direction: column;
-  flex: 1 0;
+  display: block;
 
   & + & {
 
