--- a/modules/mobile/order/src/components/Address/default.module.scss
+++ b/modules/mobile/order/src/components/Address/default.module.scss
@@ -53,3 +53,15 @@
   font-size: 16px;
   font-weight: 600;
 }
+
+.row {
+
+  display: flex;
+  flex-direction: column;
+  flex: 1 0;
+
+  & + & {
+
+    margin: 16px 0 0;
+  }
+}
