dialog for address

--- a/ui.packages/mobile-kit/src/simbols/Image/Error/default.module.scss
+++ b/ui.packages/mobile-kit/src/simbols/Image/Error/default.module.scss
@@ -17,5 +17,5 @@
   display: block;
   width: 64px;
   height: 64px;
-  background: url("./error.svg") center/100% no-repeat;
+  background: url("error.svg") center/100% no-repeat;
 }
