--- a/ui.packages/mobile-kit/src/simbols/Image/NotSrc/default.module.scss
+++ b/ui.packages/mobile-kit/src/simbols/Image/NotSrc/default.module.scss
@@ -17,5 +17,5 @@
   display: block;
   width: 64px;
   height: 64px;
-  background: url("./not-src.svg") center/100% no-repeat;
+  background: url("not-src.svg") center/100% no-repeat;
 }
