--- a/ui.packages/mobile-kit/src/simbols/Button/default.module.scss
+++ b/ui.packages/mobile-kit/src/simbols/Button/default.module.scss
@@ -19,6 +19,12 @@
   &:active {
     background: $primary-darken;
   }
+
+  &:disabled {
+
+    background: $gray-darken;
+    color: $gray-lighten;
+  }
 }
 
 .mode {
