--- a/ui.packages/mobile-kit/src/simbols/Button/default.module.scss
+++ b/ui.packages/mobile-kit/src/simbols/Button/default.module.scss
@@ -4,6 +4,7 @@
 
 .button {
 
+  position: relative;
   display: block;
   width: 100%;
   padding: 12px 16px 10px;
@@ -25,6 +26,12 @@
     background: $gray-darken;
     color: $gray-lighten;
   }
+}
+
+.in-process,
+.in-process:active {
+
+  color: transparent;
 }
 
 .mode {
