--- a/modules/mobile/order/src/components/default.module.scss
+++ b/modules/mobile/order/src/components/default.module.scss
@@ -29,28 +29,59 @@
   align-items: center;
 }
 
-.status {
+.information {
 
   display: block;
-  margin: 16px 0 0;
+  margin: 32px 0 0;
+}
+
+.row {
+
+  display: flex;
+  flex-direction: row;
+  flex: 1 0;
+  align-items: flex-end;
+
+  & + & {
+
+    margin: 24px 0 0;
+  }
+}
+
+.number {
+
+  display: flex;
+  flex-direction: column;
+  flex: 1 0;
+}
+
+.status {
+
+  display: flex;
+  flex-direction: column;
+  flex: 1 0;
+  margin: 0 0 0 16px;
 }
 
 .address {
 
   display: block;
-  margin: 16px 0 0;
+  margin: 24px 0 0;
 }
 
 .payment {
 
-  display: block;
-  margin: 16px 0 0;
+  display: flex;
+  flex-direction: column;
+  flex: 1 0;
 }
 
 .amount {
 
-  display: block;
-  margin: 16px 0 0;
+  display: flex;
+  flex-direction: column;
+  flex: 1 0;
+  margin: 0 0 0 16px;
 }
 
 .products {
@@ -59,4 +90,26 @@
   flex-direction: column;
   flex: 0 0;
   margin: 32px 0 0;
+}
+
+.title {
+
+  display: block;
+  font-size: 13px;
+  font-weight: 500;
+  color: $gray-lighten;
+}
+
+.value {
+
+  display: block;
+  font-size: 14px;
+  font-weight: 500;
+  color: $white;
+  margin: 8px 0 0
+}
+
+.uppercase {
+
+  text-transform: uppercase;
 }
