--- a/modules/mobile/order-draft/src/components/Basket/default.module.scss
+++ b/modules/mobile/order-draft/src/components/Basket/default.module.scss
@@ -50,6 +50,7 @@
 
   display: block;
   color: $danger;
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 14px;
+  font-weight: 400;
+  text-decoration: underline;
 }
