--- a/modules/mobile/main/src/components/default.module.scss
+++ b/modules/mobile/main/src/components/default.module.scss
@@ -6,7 +6,6 @@
 
   display: flex;
   flex: 1 0;
-  padding: 32px 16px 128px;
 }
 
 .content {
@@ -14,4 +13,48 @@
   display: flex;
   flex: 1 0;
   flex-direction: column;
+}
+
+.filter {
+
+  position: sticky;
+  top: 0;
+  display: flex;
+  flex-direction: row;
+  flex: 0 0;
+  padding: 8px 16px;
+  margin: 8px 8px 0;
+  border: 1px solid $gray-darken;
+  border-radius: 4px;
+  color: $white;
+  background: rgba($gray-darken, .8);
+  box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 20%);
+  backdrop-filter: blur(4px);
+  transition: transform 150ms;
+  z-index: 30;
+
+  &:active {
+    transform: scale(.98);
+  }
+}
+
+.text {
+
+  display: flex;
+  flex-direction: row;
+  flex: 1 0;
+  margin: 0 16px;
+}
+
+.icon {
+
+  display: block;
+  font-size: 16px;
+  color: $white;
+}
+
+.products {
+
+  display: block;
+  padding: 32px 16px 128px;
 }
