--- a/modules/mobile/main/src/components/default.module.scss
+++ b/modules/mobile/main/src/components/default.module.scss
@@ -13,12 +13,11 @@
   display: flex;
   flex: 1 0;
   flex-direction: column;
+  overflow: auto;
 }
 
 .filter {
 
-  position: sticky;
-  top: 0;
   display: flex;
   flex-direction: row;
   flex: 0 0;
@@ -26,7 +25,6 @@
   margin: 8px 8px 0;
   border: 1px solid $gray-darken;
   border-radius: 4px;
-  color: $white;
   background: rgba($gray-darken, .8);
   box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 20%);
   backdrop-filter: blur(4px);
@@ -44,6 +42,18 @@
   flex-direction: row;
   flex: 1 0;
   margin: 0 16px;
+  overflow: hidden;
+}
+
+.names {
+
+  display: block;
+  white-space: nowrap;
+  font-size: 15px;
+  font-weight: 60;
+  color: $white;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .icon {
