--- a/clients/mobile-ui/src/wrappers/Navigate/Header/default.module.scss
+++ b/clients/mobile-ui/src/wrappers/Navigate/Header/default.module.scss
@@ -7,7 +7,10 @@
   display: flex;
   flex: 1 0 auto;
   flex-direction: row;
-  background: $gray-darken;
+  background-color: $gray-darken;
+  background-image: url("./food.svg");
+  background-size: 160px;
+  background-position: center;
   padding: 8px 16px;
   box-shadow: 0 2px 6px 0 rgba(black, 20%);
   align-items: center;
