--- a/clients/mobile-ui/src/wrappers/Navigate/Cart/default.module.scss
+++ b/clients/mobile-ui/src/wrappers/Navigate/Cart/default.module.scss
@@ -27,6 +27,10 @@
   width: 225px;
   height: 225px;
   border-radius: 50%;
-  background: $gray-darken;
+  background-color: $gray-darken;
+  background-image: url("./food.svg");
+  background-size: 140px;
+  background-position: top center;
+
   box-shadow: -2px -2px 6px 0 rgba(black, 20%);
 }
