--- a/services/mail-srv/src/templates/order/create/index.html
+++ b/services/mail-srv/src/templates/order/create/index.html
@@ -43,7 +43,7 @@
                 <p style="color: #354052; margin: 0; padding: 0; font-size: 14px;font-weight: 700; white-space: break-spaces;">[{{ item.vendor }}] {{ item.title }} - {{ item.value }}</p>
               </td>
               <td width="200" valign="middle">
-                <p style="color: #000000; text-align: right; margin: 0; padding: 0; font-size: 14px; font-weight: 300;">{{ item.number }} x {{ item.price }} {{ item.currency.value }}</p>
+                <p style="color: #000000; text-align: right; margin: 0; padding: 0; font-size: 14px; font-weight: 300;">{{ item.number }} x {{ item.price }} {{ item.currency.displayName }}</p>
                 <p style="color: #000000; text-align: right; margin: 0; padding: 0; font-size: 14px; font-weight: 700;">= {{ item.finalPrice }} {{ item.currency.value }}</p>
               </td>
             </tr>
@@ -53,7 +53,7 @@
           <table border="0" cellspacing="0" cellpadding="0" style="width: 100%; margin: 24px 0 0; padding: 0;">
             <tr>
               <td style="background: #f5f7fb;">
-                <p style="padding: 20px; margin: 0; font-size: 14px; font-weight: bold; text-align: right;">Сумма: {{ finalPrice }}</p>
+                <p style="padding: 20px; margin: 0; font-size: 14px; font-weight: bold; text-align: right;">Сумма: {{ finalPrice }} {{ currency.displayName }}</p>
               </td>
             </tr>
           </table>
