--- a/ui.packages/mobile-kit/src/simbols/Datepicker/default.module.scss
+++ b/ui.packages/mobile-kit/src/simbols/Datepicker/default.module.scss
@@ -12,6 +12,7 @@
   border: 1px solid $gray-darken;
   border-radius: 4px;
   box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 20%);
+  overflow: hidden;
 }
 
 .month {
