--- a/ui.packages/mobile-kit/src/simbols/Time/default.module.scss
+++ b/ui.packages/mobile-kit/src/simbols/Time/default.module.scss
@@ -17,6 +17,7 @@
   border: 1px solid $gray-darken;
   border-radius: 4px;
   box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 20%);
+  overflow: hidden;
   transition: border-color 150ms;
 }
 
