date to delivery

--- a/ui.packages/mobile-kit/src/simbols/Time/default.module.scss
+++ b/ui.packages/mobile-kit/src/simbols/Time/default.module.scss
@@ -29,6 +29,14 @@
   }
 }
 
+.is-error {
+  border-color: $danger-darken;
+
+  .title {
+    background: $danger-darken;
+  }
+}
+
 .number {
 
   display: block;
