--- a/modules/mobile/main/src/components/Product/Mode/default.module.scss
+++ b/modules/mobile/main/src/components/Product/Mode/default.module.scss
@@ -7,7 +7,7 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  flex: 0 0;
+  flex: 0 0 auto;
   border-radius: 4px;
   background: $gray-lighten;
   padding: 8px 8px 8px 8px;
