--- a/modules/mobile/about/src/components/default.module.scss
+++ b/modules/mobile/about/src/components/default.module.scss
@@ -24,7 +24,7 @@
 
   display: flex;
   flex-direction: row;
-  flex: 0 0;
+  flex: 0 0 auto;
   justify-content: space-between;
   align-items: center;
 }
