--- a/modules/mobile/main/src/components/Filter/Category/default.module.scss
+++ b/modules/mobile/main/src/components/Filter/Category/default.module.scss
@@ -14,7 +14,7 @@
 
   display: flex;
   flex-direction: row;
-  flex: 0 0;
+  flex: 0 0 auto;
   justify-content: space-between;
   align-items: center;
 }
