--- a/modules/mobile/main/src/components/Filter/default.module.scss
+++ b/modules/mobile/main/src/components/Filter/default.module.scss
@@ -33,7 +33,7 @@
 
   display: flex;
   flex-direction: row;
-  flex: 0 0;
+  flex: 0 0 auto;
   justify-content: space-between;
   align-items: center;
 }
