--- a/modules/mobile/main/src/components/default.module.scss
+++ b/modules/mobile/main/src/components/default.module.scss
@@ -20,7 +20,7 @@
 
   display: flex;
   flex-direction: row;
-  flex: 0 0;
+  flex: 0 0 auto;
   padding: 8px 16px;
   margin: 8px 8px 0;
   border: 1px solid $gray-darken;
