--- a/modules/mobile/options/src/components/default.module.scss
+++ b/modules/mobile/options/src/components/default.module.scss
@@ -24,7 +24,7 @@
 
   display: flex;
   flex-direction: row;
-  flex: 0 0;
+  flex: 0 0 auto;
   justify-content: space-between;
   align-items: center;
 }
@@ -88,7 +88,7 @@
 
   display: flex;
   flex-direction: column;
-  flex: 0 0;
+  flex: 0 0 auto;
   margin: 32px 0 0;
 }
 
