--- a/modules/mobile/order-draft/src/components/Basket/default.module.scss
+++ b/modules/mobile/order-draft/src/components/Basket/default.module.scss
@@ -33,7 +33,7 @@
 
   display: flex;
   flex-direction: row;
-  flex: 0 0;
+  flex: 0 0 auto;
   justify-content: space-between;
   align-items: center;
 }
@@ -42,7 +42,7 @@
 
   display: flex;
   flex-direction: column;
-  flex: 0 0;
+  flex: 0 0 auto;
   margin: 32px 0 0;
 }
 
