--- a/modules/mobile/comments/src/components/Comment/default.module.scss
+++ b/modules/mobile/comments/src/components/Comment/default.module.scss
@@ -4,7 +4,9 @@
 
 .wrapper {
 
-  display: block;
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 auto;
   padding: 8px;
   border: 1px solid $gray-darken;
   background: $background;
