--- a/modules/mobile/comments/src/components/default.module.scss
+++ b/modules/mobile/comments/src/components/default.module.scss
@@ -10,10 +10,10 @@
   overflow: hidden;
 }
 
-.content {
+.container {
 
   display: flex;
-  flex: 1 0;
+  flex: 1 0 auto;
   flex-direction: column;
   padding: 32px 16px 128px;
   overflow: auto;
@@ -29,7 +29,7 @@
   align-items: center;
 }
 
-.comments {
+.content {
 
   display: flex;
   flex-direction: column;
