--- a/modules/mobile/main/src/components/default.module.scss
+++ b/modules/mobile/main/src/components/default.module.scss
@@ -5,7 +5,9 @@
 .wrapper {
 
   display: flex;
+  flex-direction: column;
   flex: 1 0;
+  overflow: auto;
 }
 
 .content {
@@ -67,6 +69,7 @@
 
   display: flex;
   flex-direction: column;
-  flex: 1 0;
+  flex: 1 0 auto;
   padding: 32px 16px 128px;
+  overflow: auto;
 }
