--- a/modules/mobile/order-draft/src/components/Client/default.module.scss
+++ b/modules/mobile/order-draft/src/components/Client/default.module.scss
@@ -7,13 +7,13 @@
   display: flex;
   flex-direction: column;
   flex: 1 0;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .container {
 
   display: flex;
-  flex: 1 0 auto;
+  flex: 1 0;
   flex-direction: column;
   padding: 32px 16px 128px;
   overflow: auto;
