--- a/modules/mobile/main/src/components/Product/Mode/default.module.scss
+++ b/modules/mobile/main/src/components/Product/Mode/default.module.scss
@@ -59,6 +59,21 @@
   }
 }
 
+.disabled {
+
+  background: $gray;
+
+  &:before {
+
+    background: $gray;
+  }
+
+  &:after {
+
+    background: $gray;
+  }
+}
+
 .count {
 
   position: absolute;
