--- a/modules/mobile/main/src/components/Product/default.module.scss
+++ b/modules/mobile/main/src/components/Product/default.module.scss
@@ -56,6 +56,7 @@
 
 .information {
 
+  position: relative;
   display: flex;
   flex-direction: column;
   flex: 1 0;
@@ -90,4 +91,14 @@
   right: 80px;
   display: block;
   padding: 8px 0 0;
+}
+
+.unavailable {
+
+  position: absolute;
+  left: 8px;
+  bottom: 8px;
+  font-size: 12px;
+  font-weight: 600;
+  color: $danger-lighten;
 }
