--- a/modules/mobile/comments/src/components/Comment/default.module.scss
+++ b/modules/mobile/comments/src/components/Comment/default.module.scss
@@ -4,10 +4,11 @@
 
 .wrapper {
 
+  position: relative;
   display: flex;
   flex-direction: column;
   flex: 0 0 auto;
-  padding: 8px;
+  padding: 12px 12px 16px;
   border: 1px solid $gray-darken;
   background: $background;
   border-radius: 4px;
@@ -66,4 +67,9 @@
 
   display: block;
   margin: 24px 0 0 32px;
+}
+
+.is-admin {
+
+  border-color: mix($info-darken, $background);
 }
