--- a/modules/admin/admin-products/src/components/Table/default.module.scss
+++ b/modules/admin/admin-products/src/components/Table/default.module.scss
@@ -41,7 +41,12 @@
 .title {
 
   display: block;
-  text-decoration: underline;
+}
+
+.category {
+
+  display: block;
+  margin: 8px 0 0;
 }
 
 .products {
