--- a/modules/mobile/order/src/components/default.module.scss
+++ b/modules/mobile/order/src/components/default.module.scss
@@ -13,7 +13,7 @@
 .container {
 
   display: flex;
-  flex: 1 0 auto;
+  flex: 1 0;
   flex-direction: column;
   padding: 32px 16px 128px;
   overflow: auto;
