color for attention

--- a/ui.packages/theme2/src/index.module.scss
+++ b/ui.packages/theme2/src/index.module.scss
@@ -22,3 +22,7 @@ $gray-darken:      #525252  !default;
 $info-lighten:     #DED04E  !default;
 $info:             #C7B82F  !default;
 $info-darken:      #B4A631  !default;
+
+$warning-lighten:     #CD7139  !default;
+$warning:             #C7692F  !default;
+$warning-darken:      #9F5629  !default;
