--- a/modules/mobile/order-draft/src/components/Basket/Attention/default.module.scss
+++ b/modules/mobile/order-draft/src/components/Basket/Attention/default.module.scss
@@ -7,7 +7,7 @@
   display: flex;
   padding: 8px 8px 8px 20px;
   border-radius: 4px;
-  background: $danger;
+  background: $warning;
   align-items: center;
 }
 
