--- a/modules/mobile/not-found/src/components/Information/default.module.scss
+++ b/modules/mobile/not-found/src/components/Information/default.module.scss
@@ -17,3 +17,30 @@
   text-align: center;
   margin: 24px 0 16px;
 }
+
+.controls {
+
+  display: block;
+  margin: 24px 0 0;
+}
+
+.link {
+
+  display: block;
+  width: 100%;
+  padding: 12px 16px 10px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  color: $white;
+  background: $primary;
+  border: none;
+  text-decoration: none;
+  border-radius: 8px;
+  box-sizing: border-box;
+  transition: background-color 200ms;
+
+  &:active {
+    background: $primary-darken;
+  }
+}
