--- a/modules/admin/admin-comments/src/components/List/Comment/default.module.scss
+++ b/modules/admin/admin-comments/src/components/List/Comment/default.module.scss
@@ -27,9 +27,18 @@
 .user {
 
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex: 1 0;
+  align-items: center;
   overflow: auto;
+}
+
+.icon {
+
+  display: block;
+  font-size: 12px;
+  color: $warning;
+  margin: 0 16px 0 0;
 }
 
 .date {
@@ -62,4 +71,23 @@
 
   display: block;
   margin: 16px 0 0 32px;
+
+  .wrapper {
+
+    background: lighten($pale-lilac, 7%);
+  }
+
+  .wrapper + .wrapper {
+
+    margin: 16px 0 0;
+  }
+}
+
+.controls {
+
+  display: block;
+  margin: 16px 0 0;
+  padding: 16px 0 0;
+  border-top: 1px solid $pale-lilac;
+  text-align: right;
 }
