--- a/ui.packages/admin-kit/src/symbols/CheckBox/Dark/Default/default.module.scss
+++ b/ui.packages/admin-kit/src/symbols/CheckBox/Dark/Default/default.module.scss
@@ -50,6 +50,7 @@
   width: 21px;
   height: 21px;
   border: 1px solid $blue-grey;
+  background: $white;
   border-radius: 5px;
   color: $coal-dark;
   font-size: 0;
