--- a/ui.packages/admin-kit/src/Draggable/List/default.module.scss
+++ b/ui.packages/admin-kit/src/Draggable/List/default.module.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: row;
   flex: 1 0;
-  background: $white;
+  background: $pale-grey;
   padding: 8px;
   border: 1px solid $pale-lilac;
   border-radius: 4px;
