--- a/modules/client/client-main/src/components/Products/Product/Mode/default.module.scss
+++ b/modules/client/client-main/src/components/Products/Product/Mode/default.module.scss
@@ -96,7 +96,7 @@
   font-weight: 600;
   padding: 2px 0 0;
   box-sizing: border-box;
-  border-top: 1px solid $white;
+  border-left: 1px solid $white;
 }
 
 .content {
