--- a/ui.packages/client-kit/src/Cart/default.module.scss
+++ b/ui.packages/client-kit/src/Cart/default.module.scss
@@ -20,10 +20,12 @@
   }
 
   &.disabled,
+  &.disabled:hover,
   &.disabled:active {
 
     background: $gray-lighten;
     transform: none;
+    cursor: default;
   }
 }
 
