--- a/clients/client-ui/src/wrappers/Navigate/default.module.scss
+++ b/clients/client-ui/src/wrappers/Navigate/default.module.scss
@@ -24,7 +24,7 @@
   background-image: url("./food.svg");
   background-size: 160px;
   background-position: top center;
-  padding: 8px 0;
+  padding: 8px 0 16px;
   box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 20%);
   z-index: 20;
 }
