--- a/modules/client/client-main/src/components/Aside/default.module.scss
+++ b/modules/client/client-main/src/components/Aside/default.module.scss
@@ -7,7 +7,7 @@
   position: sticky;
   top: 8px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex: 0 0;
   backdrop-filter: blur(4px);
   background: rgba($gray-darken, .8);
@@ -17,4 +17,16 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
   margin: 0 0 24px;
   z-index: 20;
+}
+
+.controls {
+
+  display: flex;
+  flex-direction: column;
+  flex: 1 0;
+}
+
+.count {
+
+  display: block;
 }
