--- a/ui.packages/client-kit/src/simbols/Textarea/default.module.scss
+++ b/ui.packages/client-kit/src/simbols/Textarea/default.module.scss
@@ -14,7 +14,7 @@
 
   position: relative;
   display: block;
-  border-bottom: 1px solid $gray-darken;
+  border-bottom: 1px solid $gray-lighten;
   margin: 12px 0 0;
   min-height: 40px;
   z-index: 20;
