--- a/ui.packages/client-kit/src/simbols/Button/default.module.scss
+++ b/ui.packages/client-kit/src/simbols/Button/default.module.scss
@@ -5,9 +5,8 @@
 .button {
 
   position: relative;
-  display: block;
-  width: 100%;
-  padding: 12px 16px 10px;
+  display: inline-block;
+  padding: 16px 32px 14px;
   text-align: center;
   font-size: 16px;
   font-weight: 600;
@@ -15,9 +14,11 @@
   background: $primary;
   border: none;
   border-radius: 8px;
+  cursor: pointer;
   transition: background-color 200ms;
 
-  &:active {
+  &:focus {
+
     background: $primary-darken;
   }
 
